<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTwitterAPI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">IP address</string>
    <string name="button_send">Set</string>
    <string name="changing_text">Set Your Preferences:</string>

    <string name="pink_button">Pink</string>
    <string name="orange_button">Orange</string>
    <string name="yellow_button">Yellow</string>
    <string name="teal_button">Teal</string>
    <string name="blue_button">Blue</string>
    <string name="purple_button">Purple</string>

    <string name="btSpeak">Say A Number</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>


</resources>
